--- a/club-manager-springboot-app/src/main/resources/static/index.html
+++ b/club-manager-springboot-app/src/main/resources/static/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>ContactManager</title>
+  <title>Club Manager</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.2edeb0c201ac4449309f.css"></head>
+<link rel="stylesheet" href="styles.9e89069c7c14ecaf24fd.css"></head>
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a8e1fcb1caf2b6c7cdae.js"></script><script type="text/javascript" src="main.061e17c378188faa4a79.js"></script></body>
+<app-root></app-root>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.4a1680e9bfa9b2241c7e.js"></script><script type="text/javascript" src="main.78036d610f737e0b0071.js"></script></body>
 </html>
+<!-- read: https://auth0.com/blog/creating-beautiful-apps-with-angular-material/-->
+<!--https://medium.com/letsboot/quick-start-with-angular-material-and-flex-layout-1b065aa1476c-->
+<!--https://blog.angularindepth.com/angular-flex-layout-flexbox-and-grid-layout-for-angular-component-6e7c24457b63-->
